[package]
name = "test_db_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-service = "2.0.2"
env_logger = "0.10.0"
dotenv = "0.15.0"
config = "0.13.3"
deadpool-postgres = {version = "0.10.5",features = ["serde"]}
tokio-postgres = {version = "0.7.8"}
serde = {version = "^1.0",features = ["derive"]}
serde_json = "1.0.95"
tokio = "1.27.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
derive_more = "0.99.17"
postgres = {version = "0.19.5"} 